--- a/web-course/epam-java-rd/pom.xml
+++ b/web-course/epam-java-rd/pom.xml
@@ -50,7 +50,7 @@
     </dependencies>
 
     <build>
-        <finalName>ROOT</finalName>
+        <finalName>web-session</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
