--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>JavaCourse</groupId>
     <artifactId>JavaCourse</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <build>
         <plugins>
             <plugin>
