--- a/web-course/json_lesson1/pom.xml
+++ b/web-course/json_lesson1/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>JavaCourse</artifactId>
+        <artifactId>web-course</artifactId>
         <groupId>JavaCourse</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>web-course</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>wine-shop</module>
-        <module>json_lesson1</module>
-    </modules>
 
-
+    <artifactId>json_lesson1</artifactId>
+<dependencies>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
+    </dependency>
+</dependencies>
 </project>
