add homework 22 oct 2018

--- a/web-course/pom.xml
+++ b/web-course/pom.xml
@@ -18,6 +18,8 @@
         <module>farm</module>
         <module>oct15_2018</module>
         <module>oct17_2018</module>
+        <module>oct22_2018</module>
+        <module>oct24_2018</module>
     </modules>
 
 
