--- a/web-course/json_lesson1/pom.xml
+++ b/web-course/json_lesson1/pom.xml
@@ -16,5 +16,10 @@
         <artifactId>gson</artifactId>
         <version>2.8.5</version>
     </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+    </dependency>
 </dependencies>
 </project>
