add game Tic Tac Toe 05 nov 2018

--- a/web-course/pom.xml
+++ b/web-course/pom.xml
@@ -20,7 +20,7 @@
         <module>oct17_2018</module>
         <module>oct22_2018</module>
         <module>oct24_2018</module>
+        <module>oct29_2018</module>
+        <module>exam_work</module>
     </modules>
-
-
 </project>
