add homework 12 nov 2018

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </build>
     <modules>
         <module>web-course</module>
+        <module>spring</module>
     </modules>
     <dependencies>
         <dependency>
