--- a/web-course/pom.xml
+++ b/web-course/pom.xml
@@ -25,5 +25,9 @@
         <module>nov07_2018</module>
         <module>welcome_messages</module>
         <module>REST-task-train</module>
+        <module>nov14_2018</module>
+        <module>nov19_2018</module>
+        <module>nov21_2018</module>
+        <module>nov12_2018</module>
     </modules>
 </project>
