add homework 19 nov 2018

--- a/web-course/nov21_2018/src/main/webapp/WEB-INF/web.xml
+++ b/web-course/nov21_2018/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,15 @@
 
 <web-app>
     <display-name>Web Application</display-name>
+    <servlet>
+        <servlet-name>PageHitCounter</servlet-name>
+        <servlet-class>homework.PageHitCounter</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>PageHitCounter</servlet-name>
+        <url-pattern>/PageHitCounter</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>15</session-timeout>
     </session-config>
