--- a/web-course/nov21_2018/pom.xml
+++ b/web-course/nov21_2018/pom.xml
@@ -10,5 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>nov21_2018</artifactId>
     <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
