--- a/spring/nov28_2018/src/main/resources/application.properties
+++ b/spring/nov28_2018/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.mvc.view.prefix:/WEB-INF/jsp/
-spring.mvc.view.suffix:.jsp
-welcome.message:Hello Mkyong
+#spring.mvc.view.prefix:/WEB-INF/jsp/
+#spring.mvc.view.suffix:.jsp
+#welcome.message:Hello Mkyong
