add homework 21 nov 2018

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <modules>
         <module>web-course</module>
         <module>spring</module>
+        <module>hibernate</module>
     </modules>
     <dependencies>
         <dependency>
