--- a/spring/nov26_2018/src/main/webapp/WEB-INF/web.xml
+++ b/spring/nov26_2018/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    <display-name>spring_mvc_1</display-name>
+    <display-name>sprin_mvc_1</display-name>
     <context-param>
         <param-name>contextClass</param-name>
         <param-value>
@@ -12,6 +12,7 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <servlet>
         <servlet-name>SpringDispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -23,7 +24,7 @@
         </init-param>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>homework</param-value>
+            <param-value>itstep</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -31,6 +32,7 @@
         <servlet-name>SpringDispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
