--- a/spring/dec05_2018/pom.xml
+++ b/spring/dec05_2018/pom.xml
@@ -10,9 +10,96 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dec05_2018</artifactId>
     <packaging>war</packaging>
+    <!--<properties>-->
+    <!--<java.version>1.8</java.version>-->
+    <!--<spring.version>3.1.3.RELEASE</spring.version>-->
+    <!--<cglib.version>2.2.2</cglib.version>-->
+    <!--</properties>-->
+
+    <!--<dependencies>-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;-->
+    <!--<dependency>-->
+    <!--<groupId>mysql</groupId>-->
+    <!--<artifactId>mysql-connector-java</artifactId>-->
+    <!--<version>8.0.13</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; Spring core & mvc &ndash;&gt;-->
+    <!--<dependency>-->
+    <!--<groupId>org.springframework</groupId>-->
+    <!--<artifactId>spring-context</artifactId>-->
+    <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+    <!--<groupId>org.springframework</groupId>-->
+    <!--<artifactId>spring-webmvc</artifactId>-->
+    <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--<groupId>org.springframework</groupId>-->
+    <!--<artifactId>spring-orm</artifactId>-->
+    <!--<version>${spring.version}</version>-->
+    <!--<type>jar</type>-->
+    <!--<scope>compile</scope>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+    <!--<groupId>org.springframework</groupId>-->
+    <!--<artifactId>spring-test</artifactId>-->
+    <!--<version>${spring.version}</version>-->
+    <!--<type>jar</type>-->
+    <!--<scope>test</scope>-->
+    <!--</dependency>-->
+
+    <!--&lt;!&ndash; CGLib for @Configuration &ndash;&gt;-->
+    <!--<dependency>-->
+    <!--<groupId>cglib</groupId>-->
+    <!--<artifactId>cglib-nodep</artifactId>-->
+    <!--<version>${cglib.version}</version>-->
+    <!--<scope>runtime</scope>-->
+    <!--</dependency>-->
+
+
+    <!--&lt;!&ndash; Servlet Spec &ndash;&gt;-->
+    <!--<dependency>-->
+    <!--<groupId>javax.servlet</groupId>-->
+    <!--<artifactId>servlet-api</artifactId>-->
+    <!--<version>3.0-alpha-1</version>-->
+    <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--<groupId>javax.servlet.jsp</groupId>-->
+    <!--<artifactId>jsp-api</artifactId>-->
+    <!--<version>2.2.1-b03</version>-->
+    <!--<scope>provided</scope>-->
+    <!--</dependency>-->
+    <!--</dependencies>-->
+
+    <!--<repositories>-->
+    <!--<repository>-->
+    <!--<id>springsource-milestones</id>-->
+    <!--<name>SpringSource Milestones Proxy</name>-->
+    <!--<url>https://oss.sonatype.org/content/repositories/springsource-milestones</url>-->
+    <!--</repository>-->
+    <!--</repositories>-->
+
+    <!--<build>-->
+    <!--<finalName>spring</finalName>-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-compiler-plugin</artifactId>-->
+    <!--<version>2.0.2</version>-->
+    <!--<configuration>-->
+    <!--<source>${java.version}</source>-->
+    <!--<target>${java.version}</target>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
+    <!--</plugins>-->
+    <!--</build>-->
     <properties>
         <java.version>1.8</java.version>
-        <spring.version>5.1.3.RELEASE</spring.version>
+        <spring.version>3.1.0.RELEASE</spring.version>
         <cglib.version>2.2.2</cglib.version>
     </properties>
 
@@ -59,18 +146,27 @@
             <scope>runtime</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <!-- Servlet Spec -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>3.0-alpha-1</version>
+            <version>2.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.2.1-b03</version>
+            <version>2.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -97,5 +193,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
